Frontend/src/pages/countdown/index.css
body {
    background-repeat: repeat;
    margin: 0;
}

.wrap {
    display: flex;
    flex-direction: column;
    max-width: 85vw;
    min-height: 90dvh;
    margin: auto;
    text-align: center;
}

.main p {
    margin: 0;
    font-weight: bold;
    font-size: 24px;
}

.heroContent {
    display: none;
}

.heroLayout {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: fit-content;
}

#heroLogo {
    height: var(--shift-logo-height);
    margin: -60px -20px -40px;
}

.rotatedText {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;

    h1 {
        font-size: 32px;
    }

    & * {
        margin: 0;
        padding: 0;
        color: var(--txt-shift-primary);
    }
}

.heroText {
    display: flex;
    flex-direction: row;

    h1 {
        font-size: 18px;
    }

    & > div:first-child {
        font-size: 1rem;
    }

    & > div:last-child {
        margin-left: 4px;
        font-size: 2rem;
    }

    .courseHeroText {
        width: fit-content;
    }

    div {
        font-weight: bold;
    }
}

.heroWrapper {
    transform: rotate(-14deg);
    margin-left: 2.5rem;
    margin-top: -.2rem;
}

.topSpacer {
    padding-top: var(--spacing-top);
}

.timerDiv {
    width: fit-content;
    margin: 20px auto 0;

    .cd {
        background-color: var(--bg-shift-alt);
        width: fit-content;
        padding: 5px 15px;
        margin-bottom: 8px;
        border-radius: 6px;
        border: 3px solid black;
        text-align: right;
        justify-self: right;
        font-weight: bold;
        text-transform: uppercase;
    }

    #timer {
        display: flex;
        flex-direction: row;
        justify-content: center;

        .timerBox {
            display: flex;
            flex-direction: column;
            color: var(--txt-shift-secondary);

            & > :first-child {
                padding: 0.5rem;
                border-radius: 0.5rem;
                margin: 0 0.5rem;
                width: 2.1rem;
                aspect-ratio: 1/1;
                background-color: var(--bg-shift-secondary);
                box-shadow: 5px 5px 0 1px var(--shadow-primary);
                border: 5px solid var(--border-primary);
                font-size: 24px;
                span{
                    font-size: 24px;
                }
            }

            & > :last-child {
                margin-top: 1rem;
                font-size: small;
                text-align: center;
                margin-top: 0.3rem;
            }
        }
    }
}

#scrollPointer {
    width: 50px;
    animation: MoveUpDown 1.25s linear infinite;
}

@keyframes MoveUpDown {
    0%,
    100% {
        transform: scale(1, -1) translateY(5px);
    }

    50% {
        transform: scale(1, -1) translateY(-5px);
    }
}

.copy-text {
    text-align: left;

    .shiftCopy {
        margin-bottom: var(--margin-between);
    }
}

.linkBtn {
    display: inline-block;
    width: fit-content;
    outline: none;
    -webkit-tap-highlight-color: transparent;
}

p#warningTxt {
    margin-bottom: var(--margin-small);
    font-size: 1rem;
    color: var(--txt-warning);
}

@media (min-width: 1024px) {
    .landingWrap{
        display: flex;
        flex-direction: row;
        height: 80vh;
        width: 92.5dvw;
        justify-content: space-between;
        .timerDiv{
            align-self: flex-end;
            margin: 0 0 2rem 0;
        }
    }

    .heroContent {
        display: block;
        position: absolute;
        top: 0;
        z-index: -1;
        height: 95dvh;
        overflow: hidden;
        img {
            width: 100dvw;
        }
    }

    #heroLogo {
        margin: -130px -30px -80px;
    }

    .rotatedText h1 {
        font-size: 44px;
    }

    .heroText {
        margin-left: 1rem;

        h1 {
            font-size: 28px;
        }

        & > div:first-child {
            font-size: 2rem;
        }

        & > div:last-child {
            margin-left: 4px;
            font-size: 4rem;
        }
    }

    .timerDiv .cd, .timerDiv .cta {
        text-align: left;
        justify-self: left;
    }

    .timerDiv .cta {
        margin-top: -1rem;
    }

    .copy-text {
        display: flex;
        justify-content: space-between;

        .shiftCopy {
            max-width: 45%;
            margin-bottom: 0px;
        }

        .mctCopy {
            max-width: 45%;
        }
    }
}

/* body {
	background-repeat: repeat;
	margin: 0;
}

.wrap {
	flex-direction: column;
	max-width: 85vw;
	min-height: 90dvh;
	margin: auto;
	text-align: center;
}

.main p {
	margin: 0;
	font-weight: bold;
	font-size: 24px;
}

.logoWrap {
	position: relative;
	display: inline-block;

	& > img:first-child {
		position: absolute;
		height: 35px;
		transform: none;
		left: 20px;
		top: 5px;
	}
}

#heroLogo {
	height: var(--shift-logo-height-mobile);
	margin: -75px -85px -40px;
}

.rotatedText {
	display: flex;
	flex-direction: column;
	align-items: center;
	text-align: center;

	& * {
		margin: 0;
		padding: 0;
	}
}

.heroText {
	display: flex;
	flex-direction: row;

	.courseHeroText {
		width: 300px;

		h1 {
			font-size: 24px;
		}
	}

	div {
		font-weight: bold;
	}

	& > div:first-child {
		font-size: 1.5rem;
	}

	& > div:last-child {
		font-size: 3rem;
	}
}

.heroWrapper {
	transform: rotate(-14deg);
}

.topSpacer {
	padding-top: var(--spacing-top);
}

.timerDiv {
	margin-top: 20px;

	#timer {
		display: flex;
		flex-direction: row;
		justify-content: center;

		.timerBox {
			display: flex;
			flex-direction: column;
			color: var(--txt-shift-secondary);

			& > :first-child {
				padding: 0.5rem;
				border-radius: 0.5rem;
				margin: 0 0.5rem;
				width: 2.1rem;
				background-color: var(--bg-shift-secondary);
				box-shadow: 5px 5px 0 1px var(--shadow-primary);
				border: 5px solid var(--border-primary);
			}

			& > :last-child {
				margin-top: 1rem;
				font-size: small;
			}
		}
	}
}

#scrollPointer {
	width: 50px;
	animation: MoveUpDown 1.25s linear infinite;
}

@keyframes MoveUpDown {
	0%,
	100% {
		transform: scale(1, -1) translateY(5px);
	}

	50% {
		transform: scale(1, -1) translateY(-5px);
	}
}

.copy-text {
	text-align: left;

	.shiftCopy {
		margin-bottom: var(--margin-between);
	}
}

.linkBtn {
	display: inline-block;
	width: fit-content;
	outline: none;
	-webkit-tap-highlight-color: transparent;
}

p#warningTxt {
	margin-bottom: var(--margin-small);
	font-size: 1rem;
	color: var(--txt-warning);
} */

